- Fixed ul styling causing the additional spacing - Dialog now expands to 100% of height

--- a/src/dialog.css
+++ b/src/dialog.css
@@ -1,5 +1,10 @@
+.dialog {
+    height: 100%;
+}
+
 .body {
     overflow-y: scroll;
+    color: #000;
 }
 
 .input {
